--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,10 @@ packages = [{include = "homework 19"}]
 [tool.poetry.dependencies]
 python = "^3.12"
 django = "^5.0.4"
+install = "^1.3.5"
+psycopg2 = "^2.9.9"
+black = "^24.4.2"
+pillow = "^10.3.0"
 
 
 [build-system]
