--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ black = "^24.4.2"
 pillow = "^10.3.0"
 ipython = "^8.24.0"
 django-dump-load-utf8 = "^0.0.4"
+django-imagekit = "^5.0.0"
 
 
 [build-system]
