--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,6 @@ packages = [{include = "homework 19"}]
 
 [tool.poetry.dependencies]
 python = "^3.12"
-django = "^5.0.4"
 install = "^1.3.5"
 psycopg2 = "^2.9.9"
 black = "^24.4.2"
@@ -18,6 +17,8 @@ django-dump-load-utf8 = "^0.0.4"
 django-imagekit = "^5.0.0"
 articles = "^0.1.0"
 pytils = "^0.4.1"
+django-phonenumber-field = "^7.3.0"
+django = "4.2.2"
 
 
 [build-system]
