--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,8 @@ articles = "^0.1.0"
 pytils = "^0.4.1"
 django-phonenumber-field = "^7.3.0"
 django = "4.2.2"
+redis = "^5.0.7"
+python-dotenv = "^1.0.1"
 
 
 [build-system]
